fix: tooltip not visible

--- a/public/assets/styles/reset.scss
+++ b/public/assets/styles/reset.scss
@@ -66,6 +66,5 @@ h6 {
 }
 
 img {
-  max-width: 100%;
   height: 100%;
 }
